dalgo-kubernetes/superset-kubernetes/monitoring/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana-kube-prom-stack-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "1800"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/name: grafana
  ports:
    - port: 80        
      targetPort: 3000
