dalgo-kubernetes/superset-kubernetes/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - supersetmonit.dalgo.org
      secretName: grafana-tls-secret
  rules:
    - host: supersetmonit.dalgo.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-stack-grafana
                port:
                  number: 80
